# pysparker

./: .gitpod.yml  README.md  pyproject.toml  readme.md
.github/workflows/: automerge.yml  create_pull_request.yml  lint.yml  pre-release.yml  release.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml
.idx/: dev.nix
pysparker/: __init__.py  utils.py
tests/: test_dummy.py
