[project]
name = "pysparker"
version = "0.1.1"
description = "Some utility functions for PySpark."
authors = [{ name = "Ben Du", email = "longendu@yahoo.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "MIT"
keywords = [
    "PySpark",
    "utils",
    "big data",
]
dependencies = [
    "loguru>=0.6.0",
    "datacompy>=0.8.1",
]

[project.urls]
Repository = "https://github.com/legendu-net/pysparker"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "pytype>=2020.08.10",
    "pyspark>=3.0.1",
    "pytest>=7.1.2",
]

